parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declarativas inicio
Rule 2     programa -> inicio
Rule 3     lista_declarativas -> declarativa lista_declarativas
Rule 4     lista_declarativas -> declarativa
Rule 5     declarativa -> inclusion
Rule 6     inclusion -> INCLUIR BIBLIOTECA
Rule 7     inicio -> ENTERO PRINCIPAL PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
Rule 8     inicio -> ENTERO PRINCIPAL PARENTESIS_IZQ PARENTESIS_DER bloque
Rule 9     bloque -> LLAVE_IZQ lista_instrucciones retorno LLAVE_DER
Rule 10    bloque -> LLAVE_IZQ lista_instrucciones LLAVE_DER
Rule 11    bloque -> LLAVE_IZQ retorno LLAVE_DER
Rule 12    bloque -> LLAVE_IZQ LLAVE_DER
Rule 13    lista_instrucciones -> instruccion lista_instrucciones
Rule 14    lista_instrucciones -> instruccion
Rule 15    instruccion -> declaracion
Rule 16    instruccion -> sentencia
Rule 17    instruccion -> estructura_de_control
Rule 18    declaracion -> declaracion_variable PUNTO_Y_COMA
Rule 19    declaracion -> prototipo_funcion PUNTO_Y_COMA
Rule 20    declaracion -> definicion_funcion
Rule 21    declaracion_variable -> tipo lista_identificadores
Rule 22    lista_identificadores -> IDENTIFICADOR
Rule 23    lista_identificadores -> IDENTIFICADOR ASIGNACION expresion
Rule 24    lista_identificadores -> IDENTIFICADOR COMA lista_identificadores
Rule 25    lista_identificadores -> IDENTIFICADOR ASIGNACION expresion COMA lista_identificadores
Rule 26    prototipo_funcion -> tipo IDENTIFICADOR PARENTESIS_IZQ lista_parametros PARENTESIS_DER
Rule 27    definicion_funcion -> tipo IDENTIFICADOR PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
Rule 28    definicion_funcion -> tipo IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER bloque
Rule 29    lista_parametros -> lista_parametros COMA parametro
Rule 30    lista_parametros -> parametro
Rule 31    lista_parametros -> VACIO
Rule 32    parametro -> tipo IDENTIFICADOR
Rule 33    sentencia -> asignacion PUNTO_Y_COMA
Rule 34    sentencia -> llamado_a_funcion PUNTO_Y_COMA
Rule 35    sentencia -> retorno PUNTO_Y_COMA
Rule 36    asignacion -> IDENTIFICADOR ASIGNACION expresion
Rule 37    asignacion -> IDENTIFICADOR INCREMENTO
Rule 38    asignacion -> IDENTIFICADOR DECREMENTO
Rule 39    condicion -> expresion Y_LOGICO expresion
Rule 40    condicion -> expresion O_LOGICO expresion
Rule 41    condicion -> NEGACION expresion
Rule 42    condicion -> expresion IGUAL_QUE expresion
Rule 43    condicion -> expresion DIFERENTE_QUE expresion
Rule 44    condicion -> expresion MENOR_QUE expresion
Rule 45    condicion -> expresion MENOR_IGUAL_QUE expresion
Rule 46    condicion -> expresion MAYOR_QUE expresion
Rule 47    condicion -> expresion MAYOR_IGUAL_QUE expresion
Rule 48    tipo -> ENTERO
Rule 49    tipo -> VACIO
Rule 50    expresion -> expresion SUMA expresion
Rule 51    expresion -> expresion RESTA expresion
Rule 52    expresion -> expresion PRODUCTO expresion
Rule 53    expresion -> expresion DIVISION expresion
Rule 54    expresion -> expresion MODULO expresion
Rule 55    expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 56    expresion -> NUMERO
Rule 57    expresion -> IDENTIFICADOR
Rule 58    expresion -> llamado_a_funcion
Rule 59    llamado_a_funcion -> IDENTIFICADOR PARENTESIS_IZQ lista_argumentos PARENTESIS_DER
Rule 60    llamado_a_funcion -> ESCRIBIR PARENTESIS_IZQ lista_argumentos PARENTESIS_DER
Rule 61    llamado_a_funcion -> IMPRIMIR PARENTESIS_IZQ lista_argumentos PARENTESIS_DER
Rule 62    lista_argumentos -> lista_argumentos COMA argumento
Rule 63    lista_argumentos -> argumento
Rule 64    lista_argumentos -> VACIO
Rule 65    argumento -> expresion
Rule 66    argumento -> CADENA
Rule 67    argumento -> referencia
Rule 68    referencia -> REFERENCIA IDENTIFICADOR
Rule 69    retorno -> RETORNAR expresion
Rule 70    retorno -> RETORNAR
Rule 71    estructura_de_control -> seleccion
Rule 72    estructura_de_control -> iteracion
Rule 73    seleccion -> SI PARENTESIS_IZQ condicion PARENTESIS_DER bloque
Rule 74    seleccion -> SI PARENTESIS_IZQ condicion PARENTESIS_DER bloque SI_NO bloque
Rule 75    seleccion -> SI PARENTESIS_IZQ condicion PARENTESIS_DER bloque SI_NO seleccion
Rule 76    iteracion -> MIENTRAS PARENTESIS_IZQ condicion PARENTESIS_DER bloque
Rule 77    iteracion -> PARA PARENTESIS_IZQ declaracion_variable PUNTO_Y_COMA condicion PUNTO_Y_COMA asignacion PARENTESIS_DER bloque
Rule 78    iteracion -> HACER bloque MIENTRAS PARENTESIS_IZQ condicion PARENTESIS_DER PUNTO_Y_COMA

Terminals, with rules where they appear

ASIGNACION           : 23 25 36
BIBLIOTECA           : 6
CADENA               : 66
COMA                 : 24 25 29 62
DECREMENTO           : 38
DIFERENTE_QUE        : 43
DIVISION             : 53
ENTERO               : 7 8 48
ESCRIBIR             : 60
HACER                : 78
IDENTIFICADOR        : 22 23 24 25 26 27 28 32 36 37 38 57 59 68
IGUAL_QUE            : 42
IMPRIMIR             : 61
INCLUIR              : 6
INCREMENTO           : 37
LLAVE_DER            : 9 10 11 12
LLAVE_IZQ            : 9 10 11 12
MAYOR_IGUAL_QUE      : 47
MAYOR_QUE            : 46
MENOR_IGUAL_QUE      : 45
MENOR_QUE            : 44
MIENTRAS             : 76 78
MODULO               : 54
NEGACION             : 41
NUMERO               : 56
O_LOGICO             : 40
PARA                 : 77
PARENTESIS_DER       : 7 8 26 27 28 55 59 60 61 73 74 75 76 77 78
PARENTESIS_IZQ       : 7 8 26 27 28 55 59 60 61 73 74 75 76 77 78
PRINCIPAL            : 7 8
PRODUCTO             : 52
PUNTO_Y_COMA         : 18 19 33 34 35 77 77 78
REFERENCIA           : 68
RESTA                : 51
RETORNAR             : 69 70
SI                   : 73 74 75
SI_NO                : 74 75
SUMA                 : 50
VACIO                : 31 49 64
Y_LOGICO             : 39
error                : 

Nonterminals, with rules where they appear

argumento            : 62 63
asignacion           : 33 77
bloque               : 7 8 27 28 73 74 74 75 76 77 78
condicion            : 73 74 75 76 77 78
declaracion          : 15
declaracion_variable : 18 77
declarativa          : 3 4
definicion_funcion   : 20
estructura_de_control : 17
expresion            : 23 25 36 39 39 40 40 41 42 42 43 43 44 44 45 45 46 46 47 47 50 50 51 51 52 52 53 53 54 54 55 65 69
inclusion            : 5
inicio               : 1 2
instruccion          : 13 14
iteracion            : 72
lista_argumentos     : 59 60 61 62
lista_declarativas   : 1 3
lista_identificadores : 21 24 25
lista_instrucciones  : 9 10 13
lista_parametros     : 7 26 27 29
llamado_a_funcion    : 34 58
parametro            : 29 30
programa             : 0
prototipo_funcion    : 19
referencia           : 67
retorno              : 9 11 35
seleccion            : 71 75
sentencia            : 16
tipo                 : 21 26 27 28 32

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declarativas inicio
    (2) programa -> . inicio
    (3) lista_declarativas -> . declarativa lista_declarativas
    (4) lista_declarativas -> . declarativa
    (7) inicio -> . ENTERO PRINCIPAL PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
    (8) inicio -> . ENTERO PRINCIPAL PARENTESIS_IZQ PARENTESIS_DER bloque
    (5) declarativa -> . inclusion
    (6) inclusion -> . INCLUIR BIBLIOTECA

    ENTERO          shift and go to state 5
    INCLUIR         shift and go to state 7

    programa                       shift and go to state 1
    lista_declarativas             shift and go to state 2
    inicio                         shift and go to state 3
    declarativa                    shift and go to state 4
    inclusion                      shift and go to state 6

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_declarativas . inicio
    (7) inicio -> . ENTERO PRINCIPAL PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
    (8) inicio -> . ENTERO PRINCIPAL PARENTESIS_IZQ PARENTESIS_DER bloque

    ENTERO          shift and go to state 5

    inicio                         shift and go to state 8

state 3

    (2) programa -> inicio .

    $end            reduce using rule 2 (programa -> inicio .)


state 4

    (3) lista_declarativas -> declarativa . lista_declarativas
    (4) lista_declarativas -> declarativa .
    (3) lista_declarativas -> . declarativa lista_declarativas
    (4) lista_declarativas -> . declarativa
    (5) declarativa -> . inclusion
    (6) inclusion -> . INCLUIR BIBLIOTECA

    ENTERO          reduce using rule 4 (lista_declarativas -> declarativa .)
    INCLUIR         shift and go to state 7

    declarativa                    shift and go to state 4
    lista_declarativas             shift and go to state 9
    inclusion                      shift and go to state 6

state 5

    (7) inicio -> ENTERO . PRINCIPAL PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
    (8) inicio -> ENTERO . PRINCIPAL PARENTESIS_IZQ PARENTESIS_DER bloque

    PRINCIPAL       shift and go to state 10


state 6

    (5) declarativa -> inclusion .

    INCLUIR         reduce using rule 5 (declarativa -> inclusion .)
    ENTERO          reduce using rule 5 (declarativa -> inclusion .)


state 7

    (6) inclusion -> INCLUIR . BIBLIOTECA

    BIBLIOTECA      shift and go to state 11


state 8

    (1) programa -> lista_declarativas inicio .

    $end            reduce using rule 1 (programa -> lista_declarativas inicio .)


state 9

    (3) lista_declarativas -> declarativa lista_declarativas .

    ENTERO          reduce using rule 3 (lista_declarativas -> declarativa lista_declarativas .)


state 10

    (7) inicio -> ENTERO PRINCIPAL . PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
    (8) inicio -> ENTERO PRINCIPAL . PARENTESIS_IZQ PARENTESIS_DER bloque

    PARENTESIS_IZQ  shift and go to state 12


state 11

    (6) inclusion -> INCLUIR BIBLIOTECA .

    INCLUIR         reduce using rule 6 (inclusion -> INCLUIR BIBLIOTECA .)
    ENTERO          reduce using rule 6 (inclusion -> INCLUIR BIBLIOTECA .)


state 12

    (7) inicio -> ENTERO PRINCIPAL PARENTESIS_IZQ . lista_parametros PARENTESIS_DER bloque
    (8) inicio -> ENTERO PRINCIPAL PARENTESIS_IZQ . PARENTESIS_DER bloque
    (29) lista_parametros -> . lista_parametros COMA parametro
    (30) lista_parametros -> . parametro
    (31) lista_parametros -> . VACIO
    (32) parametro -> . tipo IDENTIFICADOR
    (48) tipo -> . ENTERO
    (49) tipo -> . VACIO

    PARENTESIS_DER  shift and go to state 15
    VACIO           shift and go to state 17
    ENTERO          shift and go to state 13

    lista_parametros               shift and go to state 14
    parametro                      shift and go to state 16
    tipo                           shift and go to state 18

state 13

    (48) tipo -> ENTERO .

    IDENTIFICADOR   reduce using rule 48 (tipo -> ENTERO .)


state 14

    (7) inicio -> ENTERO PRINCIPAL PARENTESIS_IZQ lista_parametros . PARENTESIS_DER bloque
    (29) lista_parametros -> lista_parametros . COMA parametro

    PARENTESIS_DER  shift and go to state 19
    COMA            shift and go to state 20


state 15

    (8) inicio -> ENTERO PRINCIPAL PARENTESIS_IZQ PARENTESIS_DER . bloque
    (9) bloque -> . LLAVE_IZQ lista_instrucciones retorno LLAVE_DER
    (10) bloque -> . LLAVE_IZQ lista_instrucciones LLAVE_DER
    (11) bloque -> . LLAVE_IZQ retorno LLAVE_DER
    (12) bloque -> . LLAVE_IZQ LLAVE_DER

    LLAVE_IZQ       shift and go to state 22

    bloque                         shift and go to state 21

state 16

    (30) lista_parametros -> parametro .

    PARENTESIS_DER  reduce using rule 30 (lista_parametros -> parametro .)
    COMA            reduce using rule 30 (lista_parametros -> parametro .)


state 17

    (31) lista_parametros -> VACIO .
    (49) tipo -> VACIO .

    PARENTESIS_DER  reduce using rule 31 (lista_parametros -> VACIO .)
    COMA            reduce using rule 31 (lista_parametros -> VACIO .)
    IDENTIFICADOR   reduce using rule 49 (tipo -> VACIO .)


state 18

    (32) parametro -> tipo . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 23


state 19

    (7) inicio -> ENTERO PRINCIPAL PARENTESIS_IZQ lista_parametros PARENTESIS_DER . bloque
    (9) bloque -> . LLAVE_IZQ lista_instrucciones retorno LLAVE_DER
    (10) bloque -> . LLAVE_IZQ lista_instrucciones LLAVE_DER
    (11) bloque -> . LLAVE_IZQ retorno LLAVE_DER
    (12) bloque -> . LLAVE_IZQ LLAVE_DER

    LLAVE_IZQ       shift and go to state 22

    bloque                         shift and go to state 24

state 20

    (29) lista_parametros -> lista_parametros COMA . parametro
    (32) parametro -> . tipo IDENTIFICADOR
    (48) tipo -> . ENTERO
    (49) tipo -> . VACIO

    ENTERO          shift and go to state 13
    VACIO           shift and go to state 26

    parametro                      shift and go to state 25
    tipo                           shift and go to state 18

state 21

    (8) inicio -> ENTERO PRINCIPAL PARENTESIS_IZQ PARENTESIS_DER bloque .

    $end            reduce using rule 8 (inicio -> ENTERO PRINCIPAL PARENTESIS_IZQ PARENTESIS_DER bloque .)


state 22

    (9) bloque -> LLAVE_IZQ . lista_instrucciones retorno LLAVE_DER
    (10) bloque -> LLAVE_IZQ . lista_instrucciones LLAVE_DER
    (11) bloque -> LLAVE_IZQ . retorno LLAVE_DER
    (12) bloque -> LLAVE_IZQ . LLAVE_DER
    (13) lista_instrucciones -> . instruccion lista_instrucciones
    (14) lista_instrucciones -> . instruccion
    (69) retorno -> . RETORNAR expresion
    (70) retorno -> . RETORNAR
    (15) instruccion -> . declaracion
    (16) instruccion -> . sentencia
    (17) instruccion -> . estructura_de_control
    (18) declaracion -> . declaracion_variable PUNTO_Y_COMA
    (19) declaracion -> . prototipo_funcion PUNTO_Y_COMA
    (20) declaracion -> . definicion_funcion
    (33) sentencia -> . asignacion PUNTO_Y_COMA
    (34) sentencia -> . llamado_a_funcion PUNTO_Y_COMA
    (35) sentencia -> . retorno PUNTO_Y_COMA
    (71) estructura_de_control -> . seleccion
    (72) estructura_de_control -> . iteracion
    (21) declaracion_variable -> . tipo lista_identificadores
    (26) prototipo_funcion -> . tipo IDENTIFICADOR PARENTESIS_IZQ lista_parametros PARENTESIS_DER
    (27) definicion_funcion -> . tipo IDENTIFICADOR PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque
    (28) definicion_funcion -> . tipo IDENTIFICADOR PARENTESIS_IZQ PARENTESIS_DER bloque
    (36) asignacion -> . IDENTIFICADOR ASIGNACION expresion
    (37) asignacion -> . IDENTIFICADOR INCREMENTO
    (38) asignacion -> . IDENTIFICADOR DECREMENTO
    (59) llamado_a_funcion -> . IDENTIFICADOR PARENTESIS_IZQ lista_argumentos PARENTESIS_DER
    (60) llamado_a_funcion -> . ESCRIBIR PARENTESIS_IZQ lista_argumentos PARENTESIS_DER
    (61) llamado_a_funcion -> . IMPRIMIR PARENTESIS_IZQ lista_argumentos PARENTESIS_DER
    (73) seleccion -> . SI PARENTESIS_IZQ condicion PARENTESIS_DER bloque
    (74) seleccion -> . SI PARENTESIS_IZQ condicion PARENTESIS_DER bloque SI_NO bloque
    (75) seleccion -> . SI PARENTESIS_IZQ condicion PARENTESIS_DER bloque SI_NO seleccion
    (76) iteracion -> . MIENTRAS PARENTESIS_IZQ condicion PARENTESIS_DER bloque
    (77) iteracion -> . PARA PARENTESIS_IZQ declaracion_variable PUNTO_Y_COMA condicion PUNTO_Y_COMA asignacion PARENTESIS_DER bloque
    (78) iteracion -> . HACER bloque MIENTRAS PARENTESIS_IZQ condicion PARENTESIS_DER PUNTO_Y_COMA
    (48) tipo -> . ENTERO
    (49) tipo -> . VACIO

    LLAVE_DER       shift and go to state 29
    RETORNAR        shift and go to state 31
    IDENTIFICADOR   shift and go to state 43
    ESCRIBIR        shift and go to state 44
    IMPRIMIR        shift and go to state 45
    SI              shift and go to state 46
    MIENTRAS        shift and go to state 47
    PARA            shift and go to state 48
    HACER           shift and go to state 49
    ENTERO          shift and go to state 13
    VACIO           shift and go to state 26

    lista_instrucciones            shift and go to state 27
    retorno                        shift and go to state 28
    instruccion                    shift and go to state 30
    declaracion                    shift and go to state 32
    sentencia                      shift and go to state 33
    estructura_de_control          shift and go to state 34
    declaracion_variable           shift and go to state 35
    prototipo_funcion              shift and go to state 36
    definicion_funcion             shift and go to state 37
    asignacion                     shift and go to state 38
    llamado_a_funcion              shift and go to state 39
    seleccion                      shift and go to state 40
    iteracion                      shift and go to state 41
    tipo                           shift and go to state 42

state 23

    (32) parametro -> tipo IDENTIFICADOR .

    PARENTESIS_DER  reduce using rule 32 (parametro -> tipo IDENTIFICADOR .)
    COMA            reduce using rule 32 (parametro -> tipo IDENTIFICADOR .)


state 24

    (7) inicio -> ENTERO PRINCIPAL PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque .

    $end            reduce using rule 7 (inicio -> ENTERO PRINCIPAL PARENTESIS_IZQ lista_parametros PARENTESIS_DER bloque .)


state 25

    (29) lista_parametros -> lista_parametros COMA parametro .

    PARENTESIS_DER  reduce using rule 29 (lista_parametros -> lista_parametros COMA parametro .)
    COMA            reduce using rule 29 (lista_parametros -> lista_parametros COMA parametro .)


state 26

    (49) tipo -> VACIO .

    IDENTIFICADOR   reduce using rule 49 (tipo -> VACIO .)


state 27

    (9) bloque -> LLAVE_IZQ lista_instrucciones . retorno LLAVE_DER
    (10) bloque -> LLAVE_IZQ lista_instrucciones . LLAVE_DER
    (69) retorno -> . RETORNAR expresion
    (70) retorno -> . RETORNAR

    LLAVE_DER       shift and go to state 51
    RETORNAR        shift and go to state 31

    retorno                        shift and go to state 50

state 28

    (11) bloque -> LLAVE_IZQ retorno . LLAVE_DER
    (35) sentencia -> retorno . PUNTO_Y_COMA

    LLAVE_DER       shift and go to state 52
    PUNTO_Y_COMA    shift and go to state 53


state 29

    (12) bloque -> LLAVE_IZQ LLAVE_DER .

    $end            reduce using rule 12 (bloque -> LLAVE_IZQ LLAVE_DER .)
    MIENTRAS        reduce using rule 12 (bloque -> LLAVE_IZQ LLAVE_DER .)
    IDENTIFICADOR   reduce using rule 12 (bloque -> LLAVE_IZQ LLAVE_DER .)
    ESCRIBIR        reduce using rule 12 (bloque -> LLAVE_IZQ LLAVE_DER .)
    IMPRIMIR        reduce using rule 12 (bloque -> LLAVE_IZQ LLAVE_DER .)
    RETORNAR        reduce using rule 12 (bloque -> LLAVE_IZQ LLAVE_DER .)
    SI              reduce using rule 12 (bloque -> LLAVE_IZQ LLAVE_DER .)
    PARA            reduce using rule 12 (bloque -> LLAVE_IZQ LLAVE_DER .)
    HACER           reduce using rule 12 (bloque -> LLAVE_IZQ LLAVE_DER .)
    ENTERO          reduce using rule 12 (bloque -> LLAVE_IZQ LLAVE_DER .)
    VACIO           reduce using rule 12 (bloque -> LLAVE_IZQ LLAVE_DER .)
    LLAVE_DER       reduce using rule 12 (bloque -> LLAVE_IZQ LLAVE_DER .)
    SI_NO           reduce using rule 12 (bloque -> LLAVE_IZQ LLAVE_DER .)


state 30
